# MiniAgent

./: .gitignore  CMakeLists.txt  README.md
contrib/: MiniAgent.spec  generate_version.sh  package.sh  wrapper.sh
daemon/: CMakeLists.txt  bsock.c  bsock.h  mini.c  mini.h  pidfile.c  pidfile.h
daemon/tests/: CMakeLists.txt  testing.c
include/: ecb.h  testing.h
libs/: CMakeLists.txt
libs/libev/: CMakeLists.txt  ev.c  ev.h  ev_epoll.c  ev_vars.h  evconfig.h.in  evw_async.c  evw_backend.c  evw_check.c  evw_child.c  evw_cleanup.c  evw_common.c  evw_embed.c  evw_fd.c  evw_fork.c  evw_heap.c  evw_idle.c  evw_io.c  evw_misc.c  evw_once.c  evw_periodic.c  evw_pipe.c  evw_prepare.c  evw_signal.c  evw_signal.h  evw_stat.c  evw_timer.c  evw_verify.c  evw_walk.c  libev.m4
libs/libev/examples/: CMakeLists.txt  Makefile  async.c  child.c  common.c  common.h  example.c  httpd.c  periodic.c  signal.c  timer.c
libs/liblog/: CMakeLists.txt  README.md  common.c  log.h  process.c  rotater.c  rotater.h  stdout.c  thread.c
