
ADD_EXECUTABLE(${PROJECT_NAME}
	mini.c mini.h
)
ADD_DEFINITIONS(-DARGV_DEBUG=0)
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} ev)
TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE "-DFEATURE_LOG_PROCESS")

# Setup testing
IF(WITH_UNIT_TESTS)
        ADD_SUBDIRECTORY(tests)
ENDIF()

IF(WITH_EXAMPLES)
	ADD_SUBDIRECTORY(examples)
ENDIF(WITH_EXAMPLES)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)

