INCLUDE(CheckIncludeFiles)
INCLUDE(CheckLibraryExists)
INCLUDE(CheckFunctionExists)

CHECK_INCLUDE_FILES ("sys/epoll.h" HAVE_SYS_EPOLL_H)
CHECK_FUNCTION_EXISTS(epoll_ctl HAVE_EPOLL_CTL)
CHECK_FUNCTION_EXISTS(clock_gettime HAVE_CLOCK_GETTIME)
CHECK_LIBRARY_EXISTS(m floor "" HAVE_FLOOR)
CHECK_LIBRARY_EXISTS(rt nanosleep "" HAVE_NANOSLEEP)

#add_definitions(-D_BSD_SOURCE)
ADD_DEFINITIONS(-DECB_NO_LIBM)
ADD_DEFINITIONS(-DEV_AVOID_STDIO=1)

CONFIGURE_FILE(evconfig.h.in evconfig.h)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/libev)

SET(LIBEV_SRC
	evconfig.h ev.c
	evw_fork.c
)
ADD_LIBRARY(ev STATIC ${LIBEV_SRC})  # OR SHARED

#IF(WITH_EXAMPLES)
        ADD_SUBDIRECTORY(examples)
#ENDIF()

